RESOLVED FIXED106471
Release FastMalloc thread caches on memory warning
https://bugs.webkit.org/show_bug.cgi?id=106471
Summary Release FastMalloc thread caches on memory warning
Antti Koivisto
Reported 2013-01-09 10:31:01 PST
FastMalloc keeps some memory in per-thread caches (currently 2MB each). We currently flush these caches on memory warning for the main thread only. We should do it for other WebKit threads that use FastMalloc too.
Attachments
patch (11.92 KB, patch)
2013-01-09 10:41 PST, Antti Koivisto
webkit-ews: commit-queue-
patch2 (11.83 KB, patch)
2013-01-09 10:57 PST, Antti Koivisto
ggaren: review+
buildbot: commit-queue-
Radar WebKit Bug Importer
Comment 1 2013-01-09 10:32:13 PST
Antti Koivisto
Comment 2 2013-01-09 10:41:25 PST
Early Warning System Bot
Comment 3 2013-01-09 10:46:44 PST
Early Warning System Bot
Comment 4 2013-01-09 10:47:03 PST
Antti Koivisto
Comment 5 2013-01-09 10:57:52 PST
Geoffrey Garen
Comment 6 2013-01-09 11:07:44 PST
Comment on attachment 181950 [details] patch2 I think you also want Cleanup() to call signalScavenger(). Otherwise, the memory will be in free lists in the central cache, but it won't necessarily get unmapped.
Build Bot
Comment 7 2013-01-09 11:34:27 PST
Antti Koivisto
Comment 8 2013-01-09 12:10:11 PST
Antti Koivisto
Comment 9 2013-01-09 12:12:20 PST
(In reply to comment #6) > (From update of attachment 181950 [details]) > I think you also want Cleanup() to call signalScavenger(). Otherwise, the memory will be in free lists in the central cache, but it won't necessarily get unmapped. That shouldn't be necessary. On memory warning we forcibly free the memory in central cache afterwards. Under normal circumstances just returning the spans should do sufficient amount of tickling.
Note You need to log in before you can comment on or make changes to this bug.